--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Portfolio Page</title>
 </head>
+
 <body>
   <nav>
     <ul>
@@ -13,24 +15,25 @@
     </ul>
   </nav>
 
-  <h1>Welcome To Ironhacker's Page</h1>
+  <h1>Welcome To Jesuscabrera's Page</h1>
 
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Arts</li>
+      <li>Computers</li>
+      <li>Walking on the Woods</li>
     </ul>
   </section>
 
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Stress</li>
+      <li>People that are not friendly</li>
+      <li>Too much traffic/cars</li>
     </ul>
   </section>
 </body>
+
 </html>
